--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body{
     height: 100vh;
 }
 .container{
-   background-color: #ffff;
+   background-color: #51e2f5;
    border-radius: 8px;
    box-shadow: 0px 10px rgba(134, 123, 123, 0.1);
    padding: 30px;
@@ -21,18 +21,34 @@ h2{
 }
 input[type="text"],input[type="password"],button{
     width: 100%;
-    padding:10 px
-    margin; 10px;
+    padding:10 px;
+    margin: 10px;
     border:1px solid #ddd;
-    border-radius; 4px;
+    border-radius: 4px;
+    box-sizing:border-box
+}
+input[type="email"],input[type="email"],button{
+    width: 100%;
+    padding:10 px;
+    margin: 10px;
+    border:1px solid #ddd;
+    border-radius: 4px;
+    box-sizing:border-box
+}
+input[type="tel"],input[type="phone"],button{
+    width: 100%;
+    padding:10 px;
+    margin: 10px;
+    border:1px solid #ddd;
+    border-radius: 4px;
     box-sizing:border-box
 }
 button{
-    background-color: rgb(27, 146, 33);
-    color: white;
+    background-color: #9dfe9f;
+    color: black;
     border: none;
     cursor: pointer;
 }
 button.hover{
-    background-color: black;
+    background-color: rgb(177, 30, 30);
 }
